CAMEL-14514: Improve performance of Camel Google Pub/Sub (#3551)
CAMEL-14514: Improve performance of Camel Google Pub/Sub